syntax = "proto3";

package commands;

option go_package = "memorabilia/api;api";

import "google/protobuf/empty.proto";

service Commands {
    rpc Echo (EchoRequest) returns (EchoResponse);
    rpc Set (SetRequest) returns (google.protobuf.Empty);
    rpc Get (GetRequest) returns (GetResponse);
    rpc Delete (DeleteRequest) returns (google.protobuf.Empty);
    rpc BatchDelete (BatchDeleteRequest) returns (google.protobuf.Empty);
    rpc GetExpiredKeys (google.protobuf.Empty) returns (GetExpiredKeysResponse);
}

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

message SetRequest {
    string id = 1;
    string value = 2;
    int64 ttl = 3;
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    string value = 1;
}

message DeleteRequest {
    string id = 1;
}

message BatchDeleteRequest {
    repeated string ids = 1; 
}

message GetExpiredKeysResponse {
    repeated string ids = 1;
}